[project]
name = "audio-video-sync"
version = "0.1.0"
description = "Auto-sync video with separately recorded audio using cross-correlation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sanjeed" }]
keywords = ["audio", "video", "sync", "ffmpeg", "cover", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.9.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
]

[project.scripts]
avsync = "audio_video_sync.cli:run"

[project.urls]
Homepage = "https://github.com/sanjeed5/audio-video-sync"
Repository = "https://github.com/sanjeed5/audio-video-sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_video_sync"]
